--- a/package.json
+++ b/package.json
@@ -9,16 +9,24 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^1.6.2",
     "bootstrap": "^4.6.0",
+    "cors": "^2.8.5",
     "crypto-js": "^4.0.0",
+    "express": "^4.18.2",
     "gh-pages": "^3.1.0",
+    "googleapis": "^129.0.0",
+    "jspdf": "^2.5.1",
     "moment": "^2.29.1",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.6.5",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
+    "react-data-export": "^0.6.0",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^1.1.1",
-    "web3": "^1.3.5"
+    "web3": "^1.10.2"
   },
   "scripts": {
     "start": "react-scripts start",
